# serializer version: 1
# name: test_available_transitions[ARCHIVED][actions]
  '''
  <div class="submit-row" id="employee-record-transitions">
              <p>Changer l'état de la fiche salarié :</p>
              
                  <input class="danger js-with-confirm" name="transition_unarchive_new" type="submit" value="Nouvelle"/>
              
          </div>
  '''
# ---
# name: test_available_transitions[DISABLED][actions]
  '''
  <div class="submit-row" id="employee-record-transitions">
              <p>Changer l'état de la fiche salarié :</p>
              
                  <input class="danger js-with-confirm" name="transition_ready" type="submit" value="Complétée"/>
              
                  <input class="danger js-with-confirm" name="transition_enable" type="submit" value="Nouvelle"/>
              
          </div>
  '''
# ---
# name: test_available_transitions[NEW][actions]
  '''
  <div class="submit-row" id="employee-record-transitions">
              <p>Changer l'état de la fiche salarié :</p>
              
                  <input class="danger js-with-confirm" name="transition_ready" type="submit" value="Complétée"/>
              
                  <input class="danger js-with-confirm" name="transition_disable" type="submit" value="Désactivée"/>
              
          </div>
  '''
# ---
# name: test_available_transitions[PROCESSED][actions]
  '''
  <div class="submit-row" id="employee-record-transitions">
              <p>Changer l'état de la fiche salarié :</p>
              
                  <input class="danger js-with-confirm" name="transition_disable" type="submit" value="Désactivée"/>
              
          </div>
  '''
# ---
# name: test_available_transitions[REJECTED][actions]
  '''
  <div class="submit-row" id="employee-record-transitions">
              <p>Changer l'état de la fiche salarié :</p>
              
                  <input class="danger js-with-confirm" name="transition_ready" type="submit" value="Complétée"/>
              
                  <input class="danger js-with-confirm" name="transition_disable" type="submit" value="Désactivée"/>
              
          </div>
  '''
# ---
